--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TDU-Social",
+  "name": "TEDU-Social",
   "version": "1.0.0",
   "description": "Mini social network TDU",
   "main": "src/server.js",
